v3.0.0/_sources/plugins/event_subscription_rest_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.event_subscription_rest_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.event_subscription_rest_info -- Information module for Event Subscription Rest
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.event_subscription_rest_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Event Subscription Rest.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-eventIds"></div>
                    <b>eventIds</b>
                    <a class="ansibleOptionLink" href="#parameter-eventIds" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>EventIds query parameter. List of subscriptions related to the respective eventIds (Comma separated event ids).</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-limit"></div>
                    <b>limit</b>
                    <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Limit query parameter. The number of Subscriptions&#x27;s to limit in the resultset whose default value 10.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-offset"></div>
                    <b>offset</b>
                    <a class="ansibleOptionLink" href="#parameter-offset" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Offset query parameter. The number of Subscriptions&#x27;s to offset in the resultset whose default value 0.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-order"></div>
                    <b>order</b>
                    <a class="ansibleOptionLink" href="#parameter-order" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Order query parameter.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-sortBy"></div>
                    <b>sortBy</b>
                    <a class="ansibleOptionLink" href="#parameter-sortBy" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>SortBy query parameter. SortBy field name.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Event Subscription Rest reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Event Subscription Rest object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Event Subscription Rest
      cisco.dnac.event_subscription_rest_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        eventIds: string
        offset: 0
        limit: 0
        sortBy: string
        order: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">list</span>
                       / <span style="color: purple">elements=dictionary</span>                    </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">[
      {
        &quot;version&quot;: &quot;string&quot;,
        &quot;subscriptionId&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;string&quot;,
        &quot;description&quot;: &quot;string&quot;,
        &quot;subscriptionEndpoints&quot;: [
          {
            &quot;instanceId&quot;: &quot;string&quot;,
            &quot;subscriptionDetails&quot;: {
              &quot;connectorType&quot;: &quot;string&quot;,
              &quot;instanceId&quot;: &quot;string&quot;,
              &quot;name&quot;: &quot;string&quot;,
              &quot;description&quot;: &quot;string&quot;,
              &quot;url&quot;: &quot;string&quot;,
              &quot;basePath&quot;: &quot;string&quot;,
              &quot;resource&quot;: &quot;string&quot;,
              &quot;method&quot;: &quot;string&quot;,
              &quot;trustCert&quot;: &quot;string&quot;,
              &quot;headers&quot;: [
                {
                  &quot;string&quot;: &quot;string&quot;
                }
              ],
              &quot;queryParams&quot;: [
                {
                  &quot;string&quot;: &quot;string&quot;
                }
              ],
              &quot;pathParams&quot;: [
                {
                  &quot;string&quot;: &quot;string&quot;
                }
              ],
              &quot;body&quot;: &quot;string&quot;,
              &quot;connectTimeout&quot;: &quot;string&quot;,
              &quot;readTimeout&quot;: &quot;string&quot;
            },
            &quot;connectorType&quot;: &quot;string&quot;
          }
        ],
        &quot;filter&quot;: {
          &quot;eventIds&quot;: [
            &quot;string&quot;
          ],
          &quot;others&quot;: [
            &quot;string&quot;
          ],
          &quot;domainsSubdomains&quot;: [
            &quot;string&quot;
          ],
          &quot;types&quot;: [
            &quot;string&quot;
          ],
          &quot;categories&quot;: [
            &quot;string&quot;
          ],
          &quot;severities&quot;: [
            &quot;string&quot;
          ],
          &quot;sources&quot;: [
            &quot;string&quot;
          ]
        },
        &quot;isPrivate&quot;: &quot;string&quot;,
        &quot;tenantId&quot;: &quot;string&quot;
      }
    ]</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

